stderr
JudgeManTest.java:62: error: unnamed classes are a preview feature and are disabled by default.
    void Flush() {
    ^
  (use --enable-preview to enable unnamed classes)
JudgeManTest.java:68: error: class, interface, enum, or record expected
}
^
2 errors
